{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 16,
  "lineage": "62146bf6-84e2-6cca-6d0f-c355cc46bef4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfdemovm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/networkInterfaces/tfdemovm01-nic",
            "internal_domain_name_suffix": "ueh10nuj1prejdylowdudzteab.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/publicIPAddresses/tfDemoVM-publicip",
                "subnet_id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/virtualNetworks/tfDemoVM-vnet/subnets/internal"
              }
            ],
            "location": "eastus2",
            "mac_address": "00-0D-3A-7A-62-3C",
            "name": "tfdemovm01-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "myTFRG",
            "virtual_machine_id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Compute/virtualMachines/tfDemoVM-machine"
          },
          "dependencies": [
            "azurerm_public_ip.tfDemoVM-publicip",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.tfDemo-subnet",
            "azurerm_virtual_network.tfDemoVM-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "tfdemovm01-nic-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/networkInterfaces/tfdemovm01-nic|/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/networkSecurityGroups/tfDemoVM-nsg",
            "network_interface_id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/networkInterfaces/tfdemovm01-nic",
            "network_security_group_id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/networkSecurityGroups/tfDemoVM-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.tfdemovm01",
            "azurerm_network_security_group.tfDemoVM-nsg",
            "azurerm_public_ip.tfDemoVM-publicip",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.tfDemo-subnet",
            "azurerm_virtual_network.tfDemoVM-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfDemoVM-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/networkSecurityGroups/tfDemoVM-nsg",
            "location": "eastus2",
            "name": "tfDemoVM-nsg",
            "resource_group_name": "myTFRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_8080",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/networkSecurityGroups/tfDemoVM-nsg/securityRules/allow_8080",
            "name": "allow_8080",
            "network_security_group_name": "tfDemoVM-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "myTFRG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfDemoVM-nsg",
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/networkSecurityGroups/tfDemoVM-nsg/securityRules/allow_ssh",
            "name": "allow_ssh",
            "network_security_group_name": "tfDemoVM-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "myTFRG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfDemoVM-nsg",
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfDemoVM-publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/publicIPAddresses/tfDemoVM-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.1.143.44",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "tfDemoVM-publicip",
            "resource_group_name": "myTFRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfDemo-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/virtualNetworks/tfDemoVM-vnet/subnets/internal",
            "name": "internal",
            "resource_group_name": "myTFRG",
            "virtual_network_name": "tfDemoVM-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "azurerm_virtual_network.tfDemoVM-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfDemoVM-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "36bd0fa1-db89-44e2-8f0b-758741e66401",
            "id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/virtualNetworks/tfDemoVM-vnet",
            "location": "eastus2",
            "name": "tfDemoVM-vnet",
            "resource_group_name": "myTFRG",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/03ac9a23-1191-4d68-9a29-a1ca04c11aa2/resourceGroups/myTFRG/providers/Microsoft.Network/virtualNetworks/tfDemoVM-vnet/subnets/internal",
                "name": "internal"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    }
  ]
}